Lab 1: Fix output